--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,19 @@
-[tool.poetry]
+[project]
 name = "python-template"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
-
-[tool.poetry.dependencies]
-python = ">=3.11.0,<3.12"
-flask = "^3.0.0"
-gunicorn = "^21.2.0"
-
-[tool.pyright]
-# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
-useLibraryCodeForTypes = true
-exclude = [".cache"]
-
-[tool.ruff]
-# https://beta.ruff.rs/docs/configuration/
-select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
-ignore = ['W291', 'W292', 'W293']
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.11"
+dependencies = [
+    "flask-sqlalchemy>=3.1.1",
+    "flask>=3.1.1",
+    "pygame>=2.6.1",
+    "sqlalchemy>=2.0.41",
+    "pyjwt>=2.10.1",
+    "agent>=0.1.3",
+    "python-dotenv>=1.1.1",
+    "twilio>=9.6.4",
+    "langchain>=0.3.26",
+    "pandas>=2.3.1",
+    "werkzeug>=3.1.3",
+]
