--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Migrate>=4.0.7
 alembic>=1.13.1
 PyJWT>=2.8.0
 Flask-Limiter>=3.5.0
+pydantic>=2.0
 
 flasgger>=0.9.7
 prometheus-flask-exporter>=0.23.0
