--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,9 @@ dependencies = [
     "langchain>=0.3.26",
     "pandas>=2.3.1",
     "werkzeug>=3.1.3",
+    "opentelemetry-sdk>=1.25.0",
+    "opentelemetry-instrumentation-flask>=0.43b0",
+    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
+    "opentelemetry-instrumentation-requests>=0.43b0",
+    "opentelemetry-exporter-otlp>=1.25.0",
 ]
