--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run tests
-      run: pytest -q
+        pip install pytest-cov
+    - name: Run tests with coverage
+      run: pytest --cov=app --cov=agent --cov=models --cov=extensions --cov-report=term-missing --cov-fail-under=90
     - name: Build Docker image
       run: docker build -t habrio:ci .
