--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest-cov
+        pip install pytest-cov pip-audit
+    - name: Audit dependencies
+      run: pip-audit
     - name: Run tests with coverage
       run: pytest --cov=app --cov=agent --cov=models --cov=extensions --cov-report=term-missing --cov-fail-under=90
     - name: Build Docker image
