--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,20 +5,20 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
 dependencies = [
-    "flask-sqlalchemy>=3.1.1",
-    "flask>=3.1.1",
-    "pygame>=2.6.1",
-    "sqlalchemy>=2.0.41",
-    "pyjwt>=2.10.1",
-    "agent>=0.1.3",
-    "python-dotenv>=1.1.1",
-    "twilio>=9.6.4",
-    "langchain>=0.3.26",
-    "pandas>=2.3.1",
-    "werkzeug>=3.1.3",
-    "opentelemetry-sdk>=1.25.0",
-    "opentelemetry-instrumentation-flask>=0.43b0",
-    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
-    "opentelemetry-instrumentation-requests>=0.43b0",
-    "opentelemetry-exporter-otlp>=1.25.0",
+    "flask-sqlalchemy==3.1.1",
+    "flask==3.1.1",
+    "pygame==2.6.1",
+    "sqlalchemy==2.0.41",
+    "pyjwt==2.10.1",
+    "agent==0.1.3",
+    "python-dotenv==1.1.1",
+    "twilio==9.6.4",
+    "langchain==0.3.26",
+    "pandas==2.3.1",
+    "werkzeug==3.1.3",
+    "opentelemetry-sdk==1.25.0",
+    "opentelemetry-instrumentation-flask==0.46b0",
+    "opentelemetry-instrumentation-sqlalchemy==0.46b0",
+    "opentelemetry-instrumentation-requests==0.46b0",
+    "opentelemetry-exporter-otlp==1.25.0",
 ]
