--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
-flask
-flask_sqlalchemy
-flask-cors>=4.0.0
-python-dotenv
-twilio
-langchain
-pandas
-sqlalchemy
-werkzeug
-langchain-community
-psycopg2-binary
-openpyxl
-Flask-Migrate>=4.0.7
-alembic>=1.13.1
-PyJWT>=2.8.0
-Flask-Limiter>=3.5.0
-pydantic>=2.0
+flask==3.1.1
+flask_sqlalchemy==3.1.1
+flask-cors==6.0.1
+python-dotenv==1.1.1
+twilio==9.6.4
+langchain==0.3.26
+pandas==2.3.1
+sqlalchemy==2.0.41
+werkzeug==3.1.3
+langchain-community==0.3.27
+psycopg2-binary==2.9.10
+openpyxl==3.1.5
+Flask-Migrate==4.1.0
+alembic==1.16.4
+PyJWT==2.10.1
+Flask-Limiter==3.5.0
+pydantic==2.11.7
 
-flasgger>=0.9.7
-prometheus-flask-exporter>=0.23.0
-celery
-redis
-opentelemetry-sdk
-opentelemetry-instrumentation-flask
-opentelemetry-instrumentation-sqlalchemy
-opentelemetry-instrumentation-requests
-opentelemetry-exporter-otlp
+flasgger==0.9.7.1
+prometheus-flask-exporter==0.23.2
+celery==5.5.3
+redis==6.2.0
+opentelemetry-sdk==1.25.0
+opentelemetry-instrumentation-flask==0.46b0
+opentelemetry-instrumentation-sqlalchemy==0.46b0
+opentelemetry-instrumentation-requests==0.46b0
+opentelemetry-exporter-otlp==1.25.0
 
-pytest>=8.0
-pytest-cov>=4.1
+pytest==8.4.1
+pytest-cov==6.2.1
