--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,9 @@ jobs:
       run: pytest --cov=app --cov=agent --cov=models --cov=extensions --cov-report=term-missing --cov-fail-under=90
     - name: Build Docker image
       run: docker build -t habrio:ci .
+    - name: Scan image for vulnerabilities
+      uses: aquasecurity/trivy-action@v0.19.0
+      with:
+        image-ref: habrio:ci
+        severity: CRITICAL,HIGH
+        exit-code: '1'
