--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,23 +2,39 @@
 name = "python-template"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
-requires-python = ">=3.11"
+authors = [
+    {name = "Your Name", email = "you@example.com"},
+]
+requires-python = ">=3.11,<4.0"
 dependencies = [
-    "flask-sqlalchemy==3.1.1",
     "flask==3.1.1",
-    "pygame==2.6.1",
-    "sqlalchemy==2.0.41",
-    "pyjwt==2.10.1",
-    "agent==0.1.3",
+    "flask_sqlalchemy==3.1.1",
+    "flask-cors==6.0.1",
     "python-dotenv==1.1.1",
     "twilio==9.6.4",
-    "langchain==0.3.26",
+    "langchain==0.2.17",
+    "langchain-community==0.2.19",
+    "langsmith",
+    "numpy==1.26.4",
     "pandas==2.3.1",
+    "sqlalchemy==2.0.41",
     "werkzeug==3.1.3",
+    "psycopg2-binary==2.9.10",
+    "openpyxl==3.1.5",
+    "Flask-Migrate==4.1.0",
+    "alembic==1.16.4",
+    "PyJWT==2.10.1",
+    "Flask-Limiter==3.5.0",
+    "pydantic==2.11.7",
+    "flasgger==0.9.7.1",
+    "prometheus-flask-exporter==0.23.2",
+    "celery==5.5.3",
+    "redis==6.2.0",
     "opentelemetry-sdk==1.25.0",
     "opentelemetry-instrumentation-flask==0.46b0",
     "opentelemetry-instrumentation-sqlalchemy==0.46b0",
     "opentelemetry-instrumentation-requests==0.46b0",
     "opentelemetry-exporter-otlp==1.25.0",
+    "pytest==8.4.1",
+    "pytest-cov==6.2.1",
 ]
